punto-1-2-nosql-crud/src/nosql_dsl/generated/grammar1Parser.py
# Generated from grammar/grammar1.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammar1Parser ( Parser ):

    grammarFileName = "grammar1.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "','", "'}'", "':'", "'['", 
                     "']'", "'('", "')'", "'INSERT'", "'INTO'", "'VALUES'", 
                     "'GET'", "'FROM'", "'WHERE'", "'UPDATE'", "'SET'", 
                     "'DELETE'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'=='", "'!='", 
                     "'>='", "'<='", "'>'", "'<'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INSERT", "INTO", "VALUES", 
                      "GET", "FROM", "WHERE", "UPDATE", "SET", "DELETE", 
                      "AND", "OR", "NOT", "TRUE", "FALSE", "NULL_", "EQ", 
                      "NE", "GE", "LE", "GT", "LT", "ASSIGN", "NUMBER", 
                      "STRING", "INVALID_ID", "ID", "LINE_COMMENT", "WS" ]

    RULE_programa = 0
    RULE_instruccion = 1
    RULE_createStmt = 2
    RULE_readStmt = 3
    RULE_updateStmt = 4
    RULE_deleteStmt = 5
    RULE_objeto = 6
    RULE_par = 7
    RULE_clave = 8
    RULE_array = 9
    RULE_valor = 10
    RULE_condiciones = 11
    RULE_expr = 12
    RULE_andExpr = 13
    RULE_notExpr = 14
    RULE_primaryExpr = 15
    RULE_comparacion = 16
    RULE_opComp = 17

    ruleNames =  [ "programa", "instruccion", "createStmt", "readStmt", 
                   "updateStmt", "deleteStmt", "objeto", "par", "clave", 
                   "array", "valor", "condiciones", "expr", "andExpr", "notExpr", 
                   "primaryExpr", "comparacion", "opComp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    INSERT=10
    INTO=11
    VALUES=12
    GET=13
    FROM=14
    WHERE=15
    UPDATE=16
    SET=17
    DELETE=18
    AND=19
    OR=20
    NOT=21
    TRUE=22
    FALSE=23
    NULL_=24
    EQ=25
    NE=26
    GE=27
    LE=28
    GT=29
    LT=30
    ASSIGN=31
    NUMBER=32
    STRING=33
    INVALID_ID=34
    ID=35
    LINE_COMMENT=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(grammar1Parser.EOF, 0)

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar1Parser.InstruccionContext)
            else:
                return self.getTypedRuleContext(grammar1Parser.InstruccionContext,i)


        def getRuleIndex(self):
            return grammar1Parser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = grammar1Parser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.instruccion()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 336896) != 0)):
                    break

            self.state = 41
            self.match(grammar1Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createStmt(self):
            return self.getTypedRuleContext(grammar1Parser.CreateStmtContext,0)


        def readStmt(self):
            return self.getTypedRuleContext(grammar1Parser.ReadStmtContext,0)


        def updateStmt(self):
            return self.getTypedRuleContext(grammar1Parser.UpdateStmtContext,0)


        def deleteStmt(self):
            return self.getTypedRuleContext(grammar1Parser.DeleteStmtContext,0)


        def getRuleIndex(self):
            return grammar1Parser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = grammar1Parser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instruccion)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.createStmt()
                self.state = 44
                self.match(grammar1Parser.T__0)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.readStmt()
                self.state = 47
                self.match(grammar1Parser.T__0)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.updateStmt()
                self.state = 50
                self.match(grammar1Parser.T__0)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 52
                self.deleteStmt()
                self.state = 53
                self.match(grammar1Parser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(grammar1Parser.INSERT, 0)

        def INTO(self):
            return self.getToken(grammar1Parser.INTO, 0)

        def ID(self):
            return self.getToken(grammar1Parser.ID, 0)

        def VALUES(self):
            return self.getToken(grammar1Parser.VALUES, 0)

        def objeto(self):
            return self.getTypedRuleContext(grammar1Parser.ObjetoContext,0)


        def getRuleIndex(self):
            return grammar1Parser.RULE_createStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateStmt" ):
                listener.enterCreateStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateStmt" ):
                listener.exitCreateStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateStmt" ):
                return visitor.visitCreateStmt(self)
            else:
                return visitor.visitChildren(self)




    def createStmt(self):

        localctx = grammar1Parser.CreateStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(grammar1Parser.INSERT)
            self.state = 58
            self.match(grammar1Parser.INTO)
            self.state = 59
            self.match(grammar1Parser.ID)
            self.state = 60
            self.match(grammar1Parser.VALUES)
            self.state = 61
            self.objeto()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GET(self):
            return self.getToken(grammar1Parser.GET, 0)

        def FROM(self):
            return self.getToken(grammar1Parser.FROM, 0)

        def ID(self):
            return self.getToken(grammar1Parser.ID, 0)

        def WHERE(self):
            return self.getToken(grammar1Parser.WHERE, 0)

        def condiciones(self):
            return self.getTypedRuleContext(grammar1Parser.CondicionesContext,0)


        def getRuleIndex(self):
            return grammar1Parser.RULE_readStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStmt" ):
                listener.enterReadStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStmt" ):
                listener.exitReadStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStmt" ):
                return visitor.visitReadStmt(self)
            else:
                return visitor.visitChildren(self)




    def readStmt(self):

        localctx = grammar1Parser.ReadStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_readStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(grammar1Parser.GET)
            self.state = 64
            self.match(grammar1Parser.FROM)
            self.state = 65
            self.match(grammar1Parser.ID)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 66
                self.match(grammar1Parser.WHERE)
                self.state = 67
                self.condiciones()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPDATE(self):
            return self.getToken(grammar1Parser.UPDATE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(grammar1Parser.ID)
            else:
                return self.getToken(grammar1Parser.ID, i)

        def SET(self):
            return self.getToken(grammar1Parser.SET, 0)

        def ASSIGN(self):
            return self.getToken(grammar1Parser.ASSIGN, 0)

        def valor(self):
            return self.getTypedRuleContext(grammar1Parser.ValorContext,0)


        def WHERE(self):
            return self.getToken(grammar1Parser.WHERE, 0)

        def condiciones(self):
            return self.getTypedRuleContext(grammar1Parser.CondicionesContext,0)


        def getRuleIndex(self):
            return grammar1Parser.RULE_updateStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdateStmt" ):
                listener.enterUpdateStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdateStmt" ):
                listener.exitUpdateStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdateStmt" ):
                return visitor.visitUpdateStmt(self)
            else:
                return visitor.visitChildren(self)




    def updateStmt(self):

        localctx = grammar1Parser.UpdateStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_updateStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(grammar1Parser.UPDATE)
            self.state = 71
            self.match(grammar1Parser.ID)
            self.state = 72
            self.match(grammar1Parser.SET)
            self.state = 73
            self.match(grammar1Parser.ID)
            self.state = 74
            self.match(grammar1Parser.ASSIGN)
            self.state = 75
            self.valor()
            self.state = 76
            self.match(grammar1Parser.WHERE)
            self.state = 77
            self.condiciones()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE(self):
            return self.getToken(grammar1Parser.DELETE, 0)

        def FROM(self):
            return self.getToken(grammar1Parser.FROM, 0)

        def ID(self):
            return self.getToken(grammar1Parser.ID, 0)

        def WHERE(self):
            return self.getToken(grammar1Parser.WHERE, 0)

        def condiciones(self):
            return self.getTypedRuleContext(grammar1Parser.CondicionesContext,0)


        def getRuleIndex(self):
            return grammar1Parser.RULE_deleteStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeleteStmt" ):
                listener.enterDeleteStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeleteStmt" ):
                listener.exitDeleteStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeleteStmt" ):
                return visitor.visitDeleteStmt(self)
            else:
                return visitor.visitChildren(self)




    def deleteStmt(self):

        localctx = grammar1Parser.DeleteStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_deleteStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(grammar1Parser.DELETE)
            self.state = 80
            self.match(grammar1Parser.FROM)
            self.state = 81
            self.match(grammar1Parser.ID)
            self.state = 82
            self.match(grammar1Parser.WHERE)
            self.state = 83
            self.condiciones()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjetoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def par(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar1Parser.ParContext)
            else:
                return self.getTypedRuleContext(grammar1Parser.ParContext,i)


        def getRuleIndex(self):
            return grammar1Parser.RULE_objeto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjeto" ):
                listener.enterObjeto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjeto" ):
                listener.exitObjeto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjeto" ):
                return visitor.visitObjeto(self)
            else:
                return visitor.visitChildren(self)




    def objeto(self):

        localctx = grammar1Parser.ObjetoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_objeto)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(grammar1Parser.T__1)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33 or _la==35:
                self.state = 86
                self.par()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 87
                    self.match(grammar1Parser.T__2)
                    self.state = 88
                    self.par()
                    self.state = 93
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 96
            self.match(grammar1Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def clave(self):
            return self.getTypedRuleContext(grammar1Parser.ClaveContext,0)


        def valor(self):
            return self.getTypedRuleContext(grammar1Parser.ValorContext,0)


        def getRuleIndex(self):
            return grammar1Parser.RULE_par

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPar" ):
                listener.enterPar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPar" ):
                listener.exitPar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPar" ):
                return visitor.visitPar(self)
            else:
                return visitor.visitChildren(self)




    def par(self):

        localctx = grammar1Parser.ParContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_par)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.clave()
            self.state = 99
            self.match(grammar1Parser.T__4)
            self.state = 100
            self.valor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClaveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(grammar1Parser.STRING, 0)

        def ID(self):
            return self.getToken(grammar1Parser.ID, 0)

        def getRuleIndex(self):
            return grammar1Parser.RULE_clave

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClave" ):
                listener.enterClave(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClave" ):
                listener.exitClave(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClave" ):
                return visitor.visitClave(self)
            else:
                return visitor.visitChildren(self)




    def clave(self):

        localctx = grammar1Parser.ClaveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_clave)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not(_la==33 or _la==35):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar1Parser.ValorContext)
            else:
                return self.getTypedRuleContext(grammar1Parser.ValorContext,i)


        def getRuleIndex(self):
            return grammar1Parser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = grammar1Parser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(grammar1Parser.T__5)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 47274000452) != 0):
                self.state = 105
                self.valor()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 106
                    self.match(grammar1Parser.T__2)
                    self.state = 107
                    self.valor()
                    self.state = 112
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 115
            self.match(grammar1Parser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(grammar1Parser.STRING, 0)

        def NUMBER(self):
            return self.getToken(grammar1Parser.NUMBER, 0)

        def TRUE(self):
            return self.getToken(grammar1Parser.TRUE, 0)

        def FALSE(self):
            return self.getToken(grammar1Parser.FALSE, 0)

        def NULL_(self):
            return self.getToken(grammar1Parser.NULL_, 0)

        def objeto(self):
            return self.getTypedRuleContext(grammar1Parser.ObjetoContext,0)


        def array(self):
            return self.getTypedRuleContext(grammar1Parser.ArrayContext,0)


        def ID(self):
            return self.getToken(grammar1Parser.ID, 0)

        def getRuleIndex(self):
            return grammar1Parser.RULE_valor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor" ):
                listener.enterValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor" ):
                listener.exitValor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValor" ):
                return visitor.visitValor(self)
            else:
                return visitor.visitChildren(self)




    def valor(self):

        localctx = grammar1Parser.ValorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_valor)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(grammar1Parser.STRING)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(grammar1Parser.NUMBER)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(grammar1Parser.TRUE)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self.match(grammar1Parser.FALSE)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                self.match(grammar1Parser.NULL_)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 6)
                self.state = 122
                self.objeto()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 7)
                self.state = 123
                self.array()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 8)
                self.state = 124
                self.match(grammar1Parser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(grammar1Parser.ExprContext,0)


        def getRuleIndex(self):
            return grammar1Parser.RULE_condiciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondiciones" ):
                listener.enterCondiciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondiciones" ):
                listener.exitCondiciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondiciones" ):
                return visitor.visitCondiciones(self)
            else:
                return visitor.visitChildren(self)




    def condiciones(self):

        localctx = grammar1Parser.CondicionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_condiciones)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self):
            return self.getTypedRuleContext(grammar1Parser.AndExprContext,0)


        def expr(self):
            return self.getTypedRuleContext(grammar1Parser.ExprContext,0)


        def OR(self):
            return self.getToken(grammar1Parser.OR, 0)

        def getRuleIndex(self):
            return grammar1Parser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = grammar1Parser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.andExpr(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 137
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = grammar1Parser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 132
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 133
                    self.match(grammar1Parser.OR)
                    self.state = 134
                    self.andExpr(0) 
                self.state = 139
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AndExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def notExpr(self):
            return self.getTypedRuleContext(grammar1Parser.NotExprContext,0)


        def andExpr(self):
            return self.getTypedRuleContext(grammar1Parser.AndExprContext,0)


        def AND(self):
            return self.getToken(grammar1Parser.AND, 0)

        def getRuleIndex(self):
            return grammar1Parser.RULE_andExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)


